--- a/src/components/layout/SkillCard.css
+++ b/src/components/layout/SkillCard.css
@@ -9,8 +9,8 @@ html {
 
 .skill-card {
   position: relative;
-  top: 50%;
-  left: 50%;
+  /* top: 50%;
+  left: 10%; */
   /* transform: translateY(-50%) translateX(-50%); */
   padding: 20px;
   width: 15em;
