--- a/src/components/layout/SkillCard.css
+++ b/src/components/layout/SkillCard.css
@@ -1,16 +1,36 @@
+.skillard-section {
+  margin: 0;
+  padding: 0;
+  min-height: 50vh;
+  /* background: #fff; */
+  font-family: consolas;
+
+  
+}
+.cards-skill{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.card-skill-felx{
+  width: 1000px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
 body,
 html {
   background-color: #eee;
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
   font-size: 16px;
   font-weight: 400;
   color: #000;
 }
 
 .skill-card {
-  position: relative;
-  /* top: 50%;
-  left: 10%; */
+  
+  top: 50%;
+  left: 10%;
   /* transform: translateY(-50%) translateX(-50%); */
   padding: 20px;
   width: 15em;
