--- a/src/components/layout/SkillCard.css
+++ b/src/components/layout/SkillCard.css
@@ -4,20 +4,18 @@
   min-height: 50vh;
   /* background: #fff; */
   font-family: consolas;
-
-  
 }
-.cards-skill{
+.cards-skill {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.card-skill-felx{
+/* .card-skill-felx {
   width: 1000px;
   position: relative;
   display: flex;
   justify-content: space-between;
-}
+} */
 body,
 html {
   background-color: #eee;
@@ -28,12 +26,13 @@ html {
 }
 
 .skill-card {
-  
   top: 50%;
   left: 10%;
   /* transform: translateY(-50%) translateX(-50%); */
   padding: 20px;
-  width: 15em;
+  /* width: 15em;
+   */
+  width: 300px;
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   cursor: pointer;
@@ -52,7 +51,7 @@ html {
 }
 .skill-card:hover .skill-card__body .skill-card__knowledge li {
   transform: translateX(0);
-  transition-timing-function: cubic-bezier(0, 1.5, 1, 1);
+  transition-timing-function: cubic-bezier(0, 5, 3, 3);
   transition-duration: 0.5s;
 }
 .skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(1) {
