--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -1,12 +1,12 @@
-.navbar {
+.navbar-section {
   background-color: rgba(250, 251, 252, 0.9) !important;
 }
-.nav-link {
+.navbar-section-link {
   font-weight: 600 !important;
   color: #1f2937 !important;
   padding: 0.75rem 1rem !important ;
 }
-.nav-link:hover {
+.navbar-section-link:hover {
   background-color: rgb(192, 192, 192) !important;
   border-radius: 10px !important;
 }
