feat: All of the design are done.

--- a/src/components/layout/Work.css
+++ b/src/components/layout/Work.css
@@ -25,5 +25,8 @@
 .img-worksection {
   background-image: url("./temaribet.png") no-repeat center;
   background-size: cover;
-  
+}
+
+.donation-image{
+  width: 80% !important;;
 }
