--- a/src/components/layout/Landing.css
+++ b/src/components/layout/Landing.css
@@ -79,12 +79,12 @@
 .card0 {
   background: url("https://media-exp1.licdn.com/dms/image/C4E03AQHA_K90EmHcxw/profile-displayphoto-shrink_800_800/0/1618915386229?e=1641427200&v=beta&t=jS-o3LwCc8bmyMd5cIAimN5wJcQZyH6tz71JNB387XY")
     center center no-repeat;
-  background-size: 300px;
+  background-size: 360px;
 }
 .card0:hover {
   background: url("https://media-exp1.licdn.com/dms/image/C4E03AQHA_K90EmHcxw/profile-displayphoto-shrink_800_800/0/1618915386229?e=1641427200&v=beta&t=jS-o3LwCc8bmyMd5cIAimN5wJcQZyH6tz71JNB387XY")
-    left center no-repeat;
-  background-size: 600px;
+    right center no-repeat;
+  background-size: 450px;
 }
 .card0:hover h2 {
   opacity: 1;
