--- a/src/components/layout/Landing.css
+++ b/src/components/layout/Landing.css
@@ -77,13 +77,13 @@
   position: relative;
 }
 .card0 {
-  background: url("https://media-exp1.licdn.com/dms/image/C4E03AQHA_K90EmHcxw/profile-displayphoto-shrink_800_800/0/1618915386229?e=1641427200&v=beta&t=jS-o3LwCc8bmyMd5cIAimN5wJcQZyH6tz71JNB387XY")
+  background: url("./profile.jfif")
     center center no-repeat;
   background-size: 360px;
 }
 .card0:hover {
-  background: url("https://media-exp1.licdn.com/dms/image/C4E03AQHA_K90EmHcxw/profile-displayphoto-shrink_800_800/0/1618915386229?e=1641427200&v=beta&t=jS-o3LwCc8bmyMd5cIAimN5wJcQZyH6tz71JNB387XY")
-    right center no-repeat;
+  /* background: url("https://media-exp1.licdn.com/dms/image/C4E03AQHA_K90EmHcxw/profile-displayphoto-shrink_800_800/0/1618915386229?e=1641427200&v=beta&t=jS-o3LwCc8bmyMd5cIAimN5wJcQZyH6tz71JNB387XY")
+    right center no-repeat; */
   background-size: 450px;
 }
 .card0:hover h2 {
