feat: some changes made

--- a/src/components/layout/Work.css
+++ b/src/components/layout/Work.css
@@ -1,5 +1,9 @@
 #work {
   background-color: #fff;
+  font-family: consolas !important;
+}
+#work p {
+  font-size: 1.25rem !important;
 }
 .half-half-image-text {
   padding: 70px 0px;
